
- Fix for wrong --port option
  [Martin Wendt]

- Handle paths correctly for Windows related env
  [Martin Wendt]

- Included mimetype check for files
  based on magic.py from Jason Petrone. Included
  magic.py into this package. All magic.py code
  (c) 2000 Jason Petrone. Included from
  http://www.jsnp.net/code/magic.py.
  [Joerg Friedrich, Simon Pamies]

- Status check not working when server is running
  [Joerg Friedrich]

- Fixed wrong time formatting for Last-Modified
  and creationdate (must follow RFC 822 and 3339)
  [Cedric Krier]

0.9.2 (May 11 2009)
--

- Fixed COPY, MOVE, DELETE to support locked
  resources
  [Simon Pamies]

- Fixed PROPFIND to return 404 for non existing
  objects and also reduce property bloat
  [Simon Pamies]

- Implemented fully working LOCK and UNLOCK based
  on in memory lock/token database. Now fully supports
  cadaver and Mac OS X Finder.
  [Simon Pamies]

- Fixed MKCOL answer to 201
  [Jesus Cea]

- Fixed MSIE webdav headers
  [Jesus Cea]

- Make propfind respect the depth from queries
  [Cedric Krier]

- Add ETag in the header of GET. This is needed to implement 
  GroupDAV, CardDAV and CalDAV.
  [Cedric Krier]

- Handle the "Expect 100-continue" header
  [Cedric Krier]

- Remove debug statements and remove logging
  [Cedric Krier]

- Use the Host header in baseuri if set.
  [Cedric Krier]

- Adding If-Match on PUT and DELETE
  [Cedric Krier]

0.9.1 (May 4th 2009)
--

- Restructured the structure a bit: Made server package
  a real python package. Adapted error messages. Prepared
  egg distribution.
  [Simon Pamies]

- Fix for time formatting bug. Thanks to Ian Kallen
  [Simon Pamies]

- Small fixes for WebDavServer (status not handled correctly) and
  propfind (children are returned from a PROPFIND with "Depth: 0")
  [Kjetil Ørbekk]

0.8 (Jul 15th 2008)
---

- First try of an implementation of the LOCK and UNLOCK features.
  Still very incomplete (read: very incomplete) and not working
  in this version.
  [Simon Pamies]
