@@ -14,7 +14,7 @@ RT_PROP=3
 DAV_VERSION_1 = {
         'version' : '1',
         'options' : 
-        'GET, HEAD, COPY, MOVE, POST, PUT, PROPFIND, PROPPATCH, OPTIONS, MKCOL, DELETE, TRACE'
+        'GET, HEAD, COPY, MOVE, POST, PUT, PROPFIND, PROPPATCH, OPTIONS, MKCOL, DELETE, TRACE, REPORT'
 }
 
 DAV_VERSION_2 = {
